@@ -22,6 +22,7 @@ import com.nedap.archie.rm.support.identification.HierObjectId;
 import com.nedap.archie.rm.support.identification.ObjectVersionId;
 import com.nedap.archie.rm.support.identification.UID;
 import com.nedap.archie.rm.support.identification.UIDBasedId;
+import com.nedap.archie.rm.support.identification.VersionTreeId;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
@@ -35,6 +36,7 @@ import org.ehrbase.api.exception.PreconditionFailedException;
 import org.ehrbase.api.exception.StateConflictException;
 import org.ehrbase.api.service.EhrService;
 import org.ehrbase.dao.access.util.FolderUtils;
+import org.ehrbase.jooq.pg.tables.records.EhrFolderHistoryRecord;
 import org.ehrbase.jooq.pg.tables.records.EhrFolderRecord;
 import org.ehrbase.repository.EhrFolderRepository;
 import org.ehrbase.util.UuidGenerator;
@@ -71,34 +73,49 @@ public class DirectoryServiceImp extends BaseServiceImp implements InternalDirec
 
         List<EhrFolderRecord> ehrFolderRecords;
         if (folderId == null) {
-            ehrFolderRecords = ehrFolderRepository.getLatest(ehrId);
-        } else {
+            ehrFolderRecords = ehrFolderRepository.getFolderHead(ehrId, 1);
 
-            ehrFolderRecords = ehrFolderRepository.fromHistory(ehrFolderRepository.getByVersion(
-                    ehrId, Integer.parseInt(folderId.getVersionTreeId().getValue())));
+        } else {
+            VersionTreeId versionTreeId = folderId.getVersionTreeId();
+            if (versionTreeId.isBranch()) {
+                throw new UnsupportedOperationException(
+                        "Version branching is not supported: %s".formatted(versionTreeId.getValue()));
+            }
+            // check creating system matches
+            if (!folderId.getCreatingSystemId().getValue().equals(serverConfig.getNodename())) {
+                return Optional.empty();
+            }
+            int version = Integer.parseInt(versionTreeId.getValue());
+
+            Result<EhrFolderHistoryRecord> byVersion = ehrFolderRepository.getByVersion(ehrId, version);
+            ehrFolderRecords = ehrFolderRepository.fromHistory(byVersion);
         }
 
-        if (!ehrFolderRecords.isEmpty()) {
-            return findByPath(ehrFolderRepository.from(ehrFolderRecords), StringUtils.split(path, '/'));
-        } else {
-
+        if (ehrFolderRecords.isEmpty()) {
+            // Check if EHR for the folder exists
+            ehrService.checkEhrExists(ehrId);
             return Optional.empty();
         }
+
+        Folder root = ehrFolderRepository.from(ehrFolderRecords);
+
+        // check if id matches
+        if (folderId != null && !folderId.getRoot().equals(root.getUid().getRoot())) {
+            return Optional.empty();
+        }
+
+        return findByPath(root, StringUtils.split(path, '/'));
     }
 
     @Override
     public Optional<Folder> getByTime(UUID ehrId, OffsetDateTime time, @Nullable String path) {
+        List<EhrFolderRecord> ehrFolderRecords =
+                ehrFolderRepository.fromHistory(ehrFolderRepository.getByTime(ehrId, time));
 
-        List<EhrFolderRecord> ehrFolderRecords;
-
-        ehrFolderRecords = ehrFolderRepository.fromHistory(ehrFolderRepository.getByTime(ehrId, time));
-
-        if (!ehrFolderRecords.isEmpty()) {
-            return findByPath(ehrFolderRepository.from(ehrFolderRecords), StringUtils.split(path, '/'));
-        } else {
-
+        if (ehrFolderRecords.isEmpty()) {
             return Optional.empty();
         }
+        return findByPath(ehrFolderRepository.from(ehrFolderRecords), StringUtils.split(path, '/'));
     }
 
     private Optional<Folder> findByPath(Folder root, String[] path) {
@@ -160,7 +177,7 @@ public class DirectoryServiceImp extends BaseServiceImp implements InternalDirec
         ehrService.checkEhrExistsAndIsModifiable(ehrId);
         if (!ehrFolderRepository.hasDirectory(ehrId)) {
             throw new PreconditionFailedException(
-                    String.format("EHR with id %s dos not contains a directory.", ehrId.toString()));
+                    String.format("EHR with id %s does not contain a directory.", ehrId.toString()));
         }
 
         FolderUtils.checkSiblingNameConflicts(folder);
@@ -184,14 +201,14 @@ public class DirectoryServiceImp extends BaseServiceImp implements InternalDirec
         // validation
         ehrService.checkEhrExistsAndIsModifiable(ehrId);
         if (!ehrFolderRepository.hasDirectory(ehrId)) {
-            throw new PreconditionFailedException(
-                    String.format("EHR with id %s dos not contains a directory.", ehrId.toString()));
+            throw new PreconditionFailedException("EHR with id %s does not contain a directory.".formatted(ehrId));
         }
 
         ehrFolderRepository.delete(
                 ehrId,
                 UUID.fromString(ifMatches.getObjectId().getValue()),
                 Integer.parseInt(ifMatches.getVersionTreeId().getValue()),
+                1,
                 contributionId,
                 auditId);
     }
@@ -219,10 +236,11 @@ public class DirectoryServiceImp extends BaseServiceImp implements InternalDirec
 
         // Check if EHR exists
         if (!this.ehrService.hasEhr(ehrId)) {
-            throw new ObjectNotFoundException("Admin Directory", String.format("EHR with id %s does not exist", ehrId));
+            throw new ObjectNotFoundException("Admin Directory", "EHR with id %s does not exist".formatted(ehrId));
         }
 
-        Result<EhrFolderRecord> latest = ehrFolderRepository.getLatest(ehrId);
+        // For now only EHR.directory is supported
+        Result<EhrFolderRecord> latest = ehrFolderRepository.getFolderHead(ehrId, 1);
 
         if (latest.isNotEmpty()) {
             Folder from = ehrFolderRepository.from(latest);
@@ -231,7 +249,7 @@ public class DirectoryServiceImp extends BaseServiceImp implements InternalDirec
                 throw new IllegalArgumentException("FolderIds do not match");
             }
 
-            ehrFolderRepository.adminDelete(ehrId);
+            ehrFolderRepository.adminDelete(ehrId, 1);
         }
     }
 
